dataset1235/2025-2/1153765216/users/1370515670/executions/2372395858_1210323305.log
== RUN (2025-08-28 18:13:36)
-- CODE: 
import math
valorEmeuro.math
valorEmeuro= float(input("digite o valor"))

valorreais = valorEmEuros * 5.25

print(round(valor_reais,n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:13:36)
-- CODE: 
import math
valorEmeuro.math
valorEmeuro= float(input("digite o valor"))

valorreais = valorEmEuros * 5.25

print(round(valor_reais,n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:12:04)
-- CODE: 
valorEmeuro = float(input("digite o valor"))

valorreais = input(valorEmEuros * 5.25)

print(round(valor_reais,n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valorreais = input(valorEmEuros * 5.25)
                       ^^^^^^^^^^^^
NameError: name 'valorEmEuros' is not defined. Did you mean: 'valorEmeuro'?
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valorreais = input(valorEmEuros * 5.25)
                       ^^^^^^^^^^^^
NameError: name 'valorEmEuros' is not defined. Did you mean: 'valorEmeuro'?
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valorreais = input(valorEmEuros * 5.25)
                       ^^^^^^^^^^^^
NameError: name 'valorEmEuros' is not defined. Did you mean: 'valorEmeuro'?
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valorreais = input(valorEmEuros * 5.25)
                       ^^^^^^^^^^^^
NameError: name 'valorEmEuros' is not defined. Did you mean: 'valorEmeuro'?
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valorreais = input(valorEmEuros * 5.25)
                       ^^^^^^^^^^^^
NameError: name 'valorEmEuros' is not defined. Did you mean: 'valorEmeuro'?
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valorreais = input(valorEmEuros * 5.25)
                       ^^^^^^^^^^^^
NameError: name 'valorEmEuros' is not defined. Did you mean: 'valorEmeuro'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:21:01)
-- CODE: 
euros = int(input("digite o valor"))

convercao = euros * 5.25

print(round(convercao,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
digite o valor99.75
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
digite o valor110.25
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
digite o valor5.25
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
digite o valor36.75
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
digite o valor10.5
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
digite o valor42.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 18:12:44)
-- CODE: 
euros = int(input("digite o valor"))

convercao = euros * 5.25

print(round(convercao,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
digite o valor99.75
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
digite o valor110.25
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
digite o valor5.25
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
digite o valor36.75
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
digite o valor10.5
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
digite o valor42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:16:44)
-- CODE: 
import math
a = valorEmeuro.math
a = float(input("digite o valor"))

valorreais = a * 5.25

print(round(valor_reais,n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:16:45)
-- CODE: 
import math
a = valorEmeuro.math
a = float(input("digite o valor"))

valorreais = a * 5.25

print(round(valor_reais,n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = valorEmeuro.math
        ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:13:35)
-- CODE: 
import math
valorEmeuro.math
valorEmeuro= float(input("digite o valor"))

valorreais = valorEmEuros * 5.25

print(round(valor_reais,n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorEmeuro.math
    ^^^^^^^^^^^
NameError: name 'valorEmeuro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:18:51)
-- CODE: 
euros = int(input("digite o valor"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
digite o valor
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
digite o valor
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
digite o valor
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
digite o valor
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
digite o valor
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
digite o valor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
